# gl-ls

./: .gitignore  Makefile  README.md  pyproject.toml  setup.sh
.github/workflows/: ci.yml
ci/fixtures/: study.yml
ci/nvim/: smoke.lua
ci/pulsar/: smoke.js
ci/vscode-test/: package-lock.json  package.json  runTests.js
ci/vscode-test/suite/: index.js
clients/: README.md
clients/nvim/: README.md  glls.lua  install.sh
clients/pulsar/: README.md  install.sh  package-lock.json  package.json
clients/pulsar/src/: main.js
clients/vscode/: README.md  extension.js  install.sh  package-lock.json  package.json
docs/: architettura.md
src/glls/: __init__.py  __main__.py  actions.py  completion.py  convert.py  diagnostics.py  engine_info.py  exprlang.py  hover.py  inlay.py  lens.py  model.py  navigation.py  schema.py  semtokens.py  server.py  symbols.py  yamlpos.py
tests/e2e/: lsp_client.py  test_server_e2e.py
tests/unit/: test_actions.py  test_completion_axes.py  test_completion_context.py  test_convert.py  test_diagnostics.py  test_exprlang.py  test_main.py  test_over_expand.py  test_over_ui.py  test_schema_context.py  test_spread_dotted_over.py  test_yamlpos.py
