[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gl-ls"
version = "0.1.0"
description = "Language server per il linguaggio di granulazione (study.yml di granulation-studies + superficie engine PGE)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "pygls>=2.0,<3",
    "PyYAML>=6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[project.scripts]
glls = "glls.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
